--- a/Primax/socialm.html
+++ b/Primax/socialm.html
@@ -141,36 +141,58 @@
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link active">
-                                        Serviços Extras
+                                        Módulos
                                         <i class='bx bx-chevron-down'></i>
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
                                             <a href="financeiro.html" class="nav-link">
-                                                Financeiro
+                                                Arrecadação
                                             </a>
                                         </li>
                                         <li class="nav-item">
                                             <a href="digital.html" class="nav-link active">
-                                                Serviços Digitais
+                                                Controle interno
                                             </a>
                                         </li>
                                         <li class="#">
                                             <a href="service-details.html" class="nav-link">
-                                                Social Media Marketing 
+                                                Desenvolvimento Social
                                             </a>
                                         </li>
+                                        <li class="#">
+                                            <a href="service-details.html" class="nav-link">
+                                                BI - Inteligência empresarial
+                                            </a>
+                                            <li class="#">
+                                                <a href="service-details.html" class="nav-link">
+                                                    OUVIDORIA  
+                                                </a>
+                                            </a>
+                                            <li class="#">
+                                                <a href="service-details.html" class="nav-link">
+                                                    Fiscal  
+                                                </a> </a>
+                                                <li class="#">
+                                                    <a href="service-details.html" class="nav-link">
+                                                        Jurídico  
+                                                    </a>
                                     </ul>
-                                <li class="nav-item">
-                                    <a href="planos.html" class="nav-link">
-                                        Planos e Valores
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="planos.html" class="nav-link">
-                                        Contrate
-                                    </a>
+                                    <li class="nav-item">
+                                        <a href="planos.html" class="nav-link">
+                                           Download
+                                           
+                                    </li>
+    
+                                    <li class="nav-item">
+                                        <a href="planos.html" class="nav-link">
+                                           Treinamento
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="planos.html" class="nav-link">
+                                           Contato
+                                        </a>
                                 </li>
                             </ul>
 
