--- a/Primax/index.html
+++ b/Primax/index.html
@@ -35,7 +35,7 @@
         <title>PriMax Online - Gestão e Tecnologia</title>
 
         <!-- Favicon -->
-        <link rel="icon" type="image/png" href="assets/images/work-img/logo.ico">
+        <link rel="icon" type="image/png" href="assets/images/logos/icon-PriMax.ico">
     </head>
 
     <body>
@@ -199,7 +199,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="planos.html" class="nav-link">
+                                    <a href="contact.html" class="nav-link">
                                        Contato
                                     </a>
 
