--- a/Primax/digital.html
+++ b/Primax/digital.html
@@ -202,13 +202,13 @@
                             
 
                                 <div class="nav-btn">
-                                    <a href="https://www.primaxonline.com.br/logon/index.php" class="default-btn border-radius-5">Área do Cliente</a>
+                                    <a href="https://www.primaxonline.com.br/logon/index.php" class="default-btn border-radius-5">Acesso ao sistema</a>
                                 </div>
                             </div>
 
                             <div class="mobile-nav-area">
                                 <div class="mobile-btn">
-                                    <a href="https://www.primaxonline.com.br/logon/index.php" class="default-btn border-radius-5">Área do Cliente</a>
+                                    <a href="https://www.primaxonline.com.br/logon/index.php" class="default-btn border-radius-5">Acesso ao sistema</a>
                                 </div>
                             </div>
                         </div>
