--- a/Primax/indexd908.html
+++ b/Primax/indexd908.html
@@ -111,8 +111,8 @@
                     <div class="mobile-responsive-menu">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="assets/images/logos/Primax.png" class="logo-one" alt="Logo">
-                                <img src="assets/images/logos/Primax.png" class="logo-two" alt="Logo">
+                                <img src="assets/images/logos/Logo_Primax.png" class="logo-one" alt="Logo">
+                                <img src="assets/images/logos/Logo_PrimaxTWO.png" class="logo-two" alt="Logo">
                             </a>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                             
 
                                 <div class="nav-btn">
-                                    <a href="https://www.primaxonline.com.br/logon/index.php" class="default-btn border-radius-5">Área do Cliente</a>
+                                    <a href="https://www.primaxonline.com.br/logon/index.php" class="default-btn border-radius-5">Acesso ao sistema</a>
                                 </div>
                             </div>
 
