--- a/Primax/financeiro.html
+++ b/Primax/financeiro.html
@@ -201,7 +201,7 @@
                             
 
                                 <div class="nav-btn">
-                                    <a href="https://www.primaxonline.com.br/logon/index.php" class="default-btn border-radius-5">Área do Cliente</a>
+                                    <a href="https://www.primaxonline.com.br/logon/index.php" class="default-btn border-radius-5">Acesso ao sistema</a>
                                 </div>
                             </div>
 
