--- a/Site/index.html
+++ b/Site/index.html
@@ -244,7 +244,7 @@
                         <div class="col-lg-6">
                             <div class="banner-content-two">
                                 <h1>Fundada em 2010, a PriMAX Online atua no desenvolvimento de sistemas de informática voltados às gestões de empresas públicas e privada.</h1>
-                                <p>Os nossos sistemas de gestão tecnológica possibilitam ao cliente o controle sobre as informações de sua organização e gerência contábil, fiscal, folha de pagamento, receitas, despesas, patrimônio e almoxarifado.ddd</p>
+                                <p>Os nossos sistemas de gestão tecnológica possibilitam ao cliente o controle sobre as informações de sua organização e gerência contábil, fiscal, folha de pagamento, receitas, despesas, patrimônio e almoxarifado.dddjkkjj</p>
                                 <div class="banner-btn">
                                     
                                 </div>
